--- a/app/views/packingplan-create.html
+++ b/app/views/packingplan-create.html
@@ -58,7 +58,7 @@
 						<div class="form-group">
 							<label for="Menu">Menu*</label>
 							<ui-select name="menus" required multiple ng-disabled="isDisabled()" ng-model="plan.packingPlanMenu" theme="bootstrap">
-					            <ui-select-match placeholder="{{ menuPlaceholderText() }}">{{ $item.menuName }}
+					            <ui-select-match>{{ $item.menuName }}
 					            </ui-select-match>
 					            <ui-select-choices repeat="menu in menuMasterList | unique: 'id' | filter: $select.search | orderBy:'menuName'">
 					              <div ng-bind-html="menu.menuName | highlight: $select.search "></div>
@@ -211,7 +211,7 @@
       									 	<div class="form-group">
 		        							 	<label>Retail Item</label>
 										        <ui-select theme="bootstrap" ng-model="item.itemMasterId" ng-disabled="isDisabled()">
-										            <ui-select-match placeholder="Select Retail Item">{{ $select.selected.itemName }}</ui-select-match>
+										            <ui-select-match placeholder="Select Retail Item">{{ item.itemName }}</ui-select-match>
 										            <ui-select-choices repeat="item in itemMasterList | filter: $select.search">
 										              {{ item.itemName }}
 										            </ui-select-choices>
@@ -233,7 +233,7 @@
                    							</div>		
         								 </div>
       									 <div class="col-xs-12 col-sm-1">
-      									 	<div class="form-group">
+      									 	<div class="form-group" ng-hide="isDisabled()">
 	      									 	<label class="invisible">Remove</label>
 											    <button type="button" class="btn-remove-price-group btn btn-danger btn-xs"
 											                ng-click="removeObjectItemRestrictions(planObject.packingPlanObjectItem, key)" ng-disabled="isDisabled()">
