--- a/app/views/packingplan-list.html
+++ b/app/views/packingplan-list.html
@@ -48,9 +48,9 @@
 			<div class="col-xs-12 col-sm-6 col-md-4">
 				<div class="form-group">
 					<label for="taxIs">Menu</label>
-					<ui-select multiple ng-model="multiSelectedValues.menuMasterList" on-select="onCounrtyChange()">
-	                  <ui-select-match placeholder="Select Menus..">{{$item.countryName}}</ui-select-match>
-	                  <ui-select-choices repeat="menu in menuMasterList | unique: 'id' | filter: $select.search | orderBy:'menuName'">
+					<ui-select multiple ng-model="search.menuMasterIds">
+	                  <ui-select-match placeholder="Select Menus..">{{$item.menuName}}</ui-select-match>
+	                  <ui-select-choices repeat="menu.id as menu in menuMasterList | unique: 'id' | filter: $select.search | orderBy:'menuName'">
 	                    {{ menu.menuName }}
 	                  </ui-select-choices>
 	                </ui-select>
@@ -71,9 +71,6 @@
       <table infinite-scroll="loadPackingPlanList()" class="table table-bordered table-hover">
         <thead>
         <tr>
-          <th>
-            <input class="btn btn-default" style="margin-top:0px" type="checkbox" value="1" ng-model="allCheckboxesSelected" ng-click="selectAllCheckboxes()">
-          </th>
           <th>Packing Plan Name</th>
           <th>Packing Plan Version</th>
           <th>Menu</th>
@@ -86,12 +83,11 @@
         </thead>
         <tbody>
         <tr class="ng-scope" ng-repeat="packingplan in packingPlanList">
-          <td>
-            <input class="btn btn-default" style="margin-top:0px" type="checkbox" value="1" ng-show="isValidForRuleApply(packingplan)" ng-model="packingplan.selected" >
-          </td>
           <td>{{ packingplan.name }}</td>
           <td>{{ packingplan.version }}</td>
-          <td>{{ loadPackingPlanMenus(packingplan) }}</td>
+          <td>
+          	<span class="label label-info" ng-repeat="menu in packingplan.packingPlanMenu">{{ menu.menuMaster.menuName }}</span> 
+          </td>
           <td>{{ packingplan.startDate}}</td>
           <td>{{ packingplan.endDate}}</td>
           <td>{{ loadUpdatedOn(packingplan) }}</td>
