--- a/app/views/packingplan-create.html
+++ b/app/views/packingplan-create.html
@@ -210,12 +210,14 @@
       									 <div class="col-xs-12 col-sm-5">
       									 	<div class="form-group">
 		        							 	<label>Retail Item</label>
-										        <ui-select theme="bootstrap" ng-model="item.itemMasterId" ng-disabled="isDisabled()">
-										            <ui-select-match placeholder="Select Retail Item">{{ item.itemName }}</ui-select-match>
-										            <ui-select-choices repeat="item in itemMasterList | filter: $select.search">
-										              {{ item.itemName }}
-										            </ui-select-choices>
-										        </ui-select>
+		        							 	<ui-select ng-if="!isDisabled()" theme="bootstrap" ng-model="item.itemMasterId" >
+				                					<ui-select-match placeholder="Select Retail Item">{{$select.selected.itemName}}</ui-select-match>
+				                					<ui-select-choices repeat="itm.id as itm in itemMasterList | filter: $select.search">
+				                  						<div ng-bind-html="itm.itemName"></div>
+				                					</ui-select-choices>
+				              					</ui-select>
+				              					<input ng-if="isDisabled()" ng-model="item.itemName" type="text" class="form-control" 
+				              						name="itemMasterId" ng-disabled="true">
 									        </div>
         								 </div>
 	      								 <div class="col-xs-12 col-sm-3">
@@ -250,9 +252,9 @@
 				</div>
 			</div>
 			<!-- Packing Plan Object Section -->
-			<div class="panel-footer text-right">
-				<a href="#/packingplan-list" class="btn btn-default" ng-hide="readOnly">Cancel</a>
-				<button class="btn btn-primary" ng-click="formSave()" ng-hide="readOnly">
+			<div class="panel-footer text-right" ng-hide="readOnly">
+				<a href="#/packingplan-list" class="btn btn-default">Cancel</a>
+				<button class="btn btn-primary" ng-click="formSave()">
 					<span class="fa fa-check-square-o" aria-hidden="true"></span> <span
 						class="hidden-xs">Save</span>
 				</button>
