--- a/app/views/packingplan-create.html
+++ b/app/views/packingplan-create.html
@@ -18,7 +18,7 @@
 				<div class="row">
 				   <div class="col-xs-12 col-sm-4">
 						<label for="name">Name*</label>
-						<input ng-model="plan.name" type="text" required class="form-control" id="packingPlanName" 
+						<input ng-model="plan.name" type="text" name="Name" required class="form-control" id="packingPlanName" 
 							placeholder="Packing Plan Name" ng-disabled="isDisabled()">
 					</div>
 					<div class="col-xs-12 col-sm-4">
@@ -50,7 +50,7 @@
 					<div class="col-xs-12 col-sm-4">
 						<div class="form-group">
 							<label for="Version">Version*</label>
-							<input ng-model="plan.version" type="text" required class="form-control" id="packingPlanVersion" 
+							<input ng-model="plan.version" type="text" name="Version" required class="form-control" id="packingPlanVersion" 
 								placeholder="Packing Plan Version" ng-disabled="isDisabled()">
 						</div>
 					</div>
@@ -97,7 +97,7 @@
 									   <div class="row">
 								        <div class="col-xs-12 col-sm-4">
 								        	<label for="name">Name*</label>
-											<input ng-model="planObject.name" type="text" class="form-control" id="planObjectName" 
+											<input ng-model="planObject.name" name="ObjectName" type="text" class="form-control" id="planObjectName" 
 												placeholder="Plan Object Name" ng-disabled="isDisabled()">	
 		         						</div>
 							            <div class="col-xs-12 col-sm-4">
@@ -153,30 +153,28 @@
 							            <div class="col-xs-12 col-sm-3">
 							            	<div class="form-group">
 									          	<label for="measurements">Measurements</label>
-									       		<span ng-show="isMeasurementRequired() && !isMeasurementValid()"><p>* Length, Breadth and
-									            	Height fields are all required if one contains a value.</p></span>
-									            <input ng-model="planObject.length" ng-required="isMeasurementRequired()" type="text" placeholder="Length" 
+									       		<input ng-model="planObject.length" ng-required="planObject.breadth || planObject.height || planObject.dimensionType" type="text" placeholder="Length" 
 									            	name="Length" ng-disabled="isDisabled()" class="form-control">
 								            </div>	
 								        </div>
 								        <div class="col-xs-12 col-sm-3">
 								        	<div class="form-group">
 									        	<label class="invisible">Breadth</label>
-									            <input ng-model="planObject.breadth" ng-required="isMeasurementRequired()" type="text" placeholder="Breadth" 
+									            <input ng-model="planObject.breadth" ng-required="planObject.length || planObject.height || planObject.dimensionType" type="text" placeholder="Breadth" 
 									            	name="Breadth" ng-disabled="isDisabled()" class="form-control">
 								            </div>	
 								        </div>
 								        <div class="col-xs-12 col-sm-3">
 								        	<div class="form-group">
 									        	<label class="invisible">Height</label>
-									            <input ng-model="planObject.height" ng-required="isMeasurementRequired()" type="text" placeholder="Height" 
+									            <input ng-model="planObject.height" ng-required="planObject.breadth || planObject.length || planObject.dimensionType" type="text" placeholder="Height" 
 									            	name="Height" ng-disabled="isDisabled()" class="form-control">
 								            </div>	
 								        </div>
 								        <div class="col-xs-12 col-sm-3">
 								        	<div class="form-group">
 									        	<label class="invisible">Dimenstion</label>
-									            <select ng-model="planObject.dimensionType" ng-required="isMeasurementRequired()"
+									            <select ng-model="planObject.dimensionType" ng-required="planObject.breadth || planObject.length || planObject.height"
 									                        name="Unit of Measurement" ng-disabled="isDisabled()" class="form-control">
 									                <option value="">Select UOM</option>        
 									            	<option ng-selected="planObject.dimensionType === dimension.id" ng-repeat="dimension in dimensionUnits"
@@ -210,7 +208,8 @@
       									 <div class="col-xs-12 col-sm-5">
       									 	<div class="form-group">
 		        							 	<label>Retail Item</label>
-		        							 	<ui-select ng-if="!isDisabled()" theme="bootstrap" ng-model="item.itemMasterId" >
+		        							 	<ui-select ng-if="!isDisabled()" theme="bootstrap" ng-model="item.itemMasterId" 
+		        							 			ng-required="item.maxQty || item.minQty">
 				                					<ui-select-match placeholder="Select Retail Item">{{$select.selected.itemName}}</ui-select-match>
 				                					<ui-select-choices repeat="itm.id as itm in itemMasterList | filter: $select.search">
 				                  						<div ng-bind-html="itm.itemName"></div>
@@ -224,14 +223,16 @@
 	      								 	<div class="form-group">
 										     	<label>Min Qty</label>
 	          									<input custom-validity custom-pattern="number" type="text" maxlength="5" class="form-control"
-	                   									name="minQty" ng-model="item.minQty" placeholder="0" ng-disabled="isDisabled()"/>
+	                   									name="minQty" ng-model="item.minQty" placeholder="0" ng-disabled="isDisabled()"
+	                   									ng-required="item.itemMasterId || item.maxQty"/>
                    							</div>		
         								 </div>
         								 <div class="col-xs-12 col-sm-3">
         								 	<div class="form-group">
 										     	<label>Max Qty</label>
 	          									<input custom-validity custom-pattern="number" type="text" maxlength="5" class="form-control"
-	                   									name="maxQty" ng-model="item.maxQty" placeholder="0" ng-disabled="isDisabled()"/>
+	                   									name="maxQty" ng-model="item.maxQty" placeholder="0" ng-disabled="isDisabled()"
+	                   									ng-required="item.itemMasterId || item.minQty"/>
                    							</div>		
         								 </div>
       									 <div class="col-xs-12 col-sm-1">
