--- a/app/views/category-list.html
+++ b/app/views/category-list.html
@@ -172,17 +172,33 @@
       </td>
       <td>
         <span ng-hide="canEditOrRearrangeCategory(category) && inEditMode">{{ category.name }}</span>
+        <div ng-if="isCategoryToEditNameNotValid && rowIndexCategory == $index">
         <input
           ng-model="categoryToEdit.name"
           type="text"
           class="form-control"
-          id="edit-category-name-{{$index}}"
+          id="{{$index}}"
           placeholder="Enter Category Name"
           maxlength="25"
           required="true"
           ng-show="canEditOrRearrangeCategory(category) && inEditMode"
-          name="Category name-{{$index}}"          
-          >
+          name="Category name-{{$index}}"
+          style="border:1px solid #ff0000">
+          <div ng-if="isCategoryToEditNameNotValid" style="color:red">The Category Name is a required field !</div>
+          
+          </div>
+        <div ng-if="!isCategoryToEditNameNotValid || rowIndexCategory != $index">
+        <input
+          ng-model="categoryToEdit.name"
+          type="text"
+          class="form-control"
+          id="{{$index}}"
+          placeholder="Enter Category Name"
+          maxlength="25"
+          required="true"
+          ng-show="canEditOrRearrangeCategory(category) && inEditMode"
+          name="Category name-{{$index}}">
+          </div>
       </td>
       <td>
         <span ng-hide="canEditOrRearrangeCategory(category) && inEditMode">{{ category.description }}</span>
@@ -221,7 +237,7 @@
                 ng-click="deleteRecordDialog(category, ['name', 'description'])">
           <span class="fa fa-trash"></span>
         </button>
-        <button class="btn btn-xs btn-success" ng-show="canEditOrRearrangeCategory(category)" ng-click="saveChange(category)">
+        <button class="btn btn-xs btn-success" ng-show="canEditOrRearrangeCategory(category)" ng-click="saveChange(category, $index)">
           <span class="fa fa-check"></span>
         </button>
         <button class="btn btn-xs btn-default" ng-show="canEditOrRearrangeCategory(category)" ng-click="cancelChange()">
