Revert "TSVPORTAL-11857 - Fixing bug"
This reverts commit 2b4f22178d8e424b7886fd2eb4cf365a90e53845.

--- a/app/views/store-instance-create.html
+++ b/app/views/store-instance-create.html
@@ -58,13 +58,7 @@
         <label>Schedule Date <span ng-show="!isActionState('end-instance')">*</span></label>
       </div>
       <div class="col-xs-12 col-sm-8">
-          <date-picker-field
-            form="createStoreInstance"
-            name="scheduleDate"
-            required="true"
-            ng-model="formData.scheduleDate"
-            disable="isActionState('end-instance')">
-          </date-picker-field>
+          <date-picker-field form="createStoreInstance" name="scheduleDate" gray-past="true"  custom-effective="true" custom-date="formData.scheduleDate" required="true" ng-model="formData.scheduleDate" disable="isActionState('end-instance')"></date-picker-field>
       </div>
     </div>
 
