--- a/app/views/packingplan-create.html
+++ b/app/views/packingplan-create.html
@@ -238,7 +238,7 @@
       									 <div class="col-xs-12 col-sm-1">
       									 	<div class="form-group" ng-hide="isDisabled()">
 	      									 	<label class="invisible">Remove</label>
-											    <button type="button" class="btn-remove-price-group btn btn-danger btn-xs"
+											    <button type="button" style="width: 30%;display:inherit;line-height: 2" class="btn-remove-price-group btn btn-danger btn-xs"
 											                ng-click="removeObjectItemRestrictions(planObject.packingPlanObjectItem, key)" ng-disabled="isDisabled()">
 											          <i class="fa fa-close"></i>
 											    </button>
