--- a/app/views/directives/input-station-exception.html
+++ b/app/views/directives/input-station-exception.html
@@ -22,7 +22,7 @@
 
           <div class="col-xs-12 col-sm-6">
             <date-picker-field ng-if="minDate" min-date="$parent.minDate"
-              disable="$parent.isAddPriceDisabled()" form="form" label="Effective From"
+              disable="viewOnly || itemIsActive" form="form" label="Effective From"
               name="StationExceptionEffectiveFrom" ng-model="stationException.startDate" required="true">
             </date-picker-field>
           </div>
@@ -41,14 +41,14 @@
 
 					<div class="col-xs-12 col-sm-6">
 
-						<div class="form-group" ng-disabled="$parent.isAddPriceDisabled()" ng-class="{ 'has-error' : !stationException.stationId , 'has-success' : stationException.stationId }">
+						<div class="form-group" ng-disabled="$parent.$parent.isAddPriceDisabled()" ng-class="{ 'has-error' : !stationException.stationId , 'has-success' : stationException.stationId }">
 
 							<label>Station *</label>
 
 							<select name="Station" required class="form-control" ng-model="stationException.stationId"
-                ng-disabled="!stationException.startDate && !stationException.endDate || $parent.isAddPriceDisabled()"
-                ng-options="station.id as station.code for station in stationException.stations">
-              </select>
+                					ng-disabled="viewOnly || itemIsActive"
+                					ng-options="station.id as station.code for station in stationException.stations">
+              				</select>
 
 						</div>
 
@@ -56,11 +56,11 @@
 
 					<div class="col-xs-12 col-sm-6">
 
-						<div class="form-group" ng-disabled="$parent.isAddPriceDisabled()" ng-class="{ 'has-error' : !stationException.taxIs , 'has-success' : stationException.taxIs }">
+						<div class="form-group" ng-disabled="$parent.$parent.isAddPriceDisabled()" ng-class="{ 'has-error' : !stationException.taxIs , 'has-success' : stationException.taxIs }">
 
 							<label>Tax Is *</label>
 
-							<select name="Tax Is" required ng-disabled="!stationException.startDate && !stationException.endDate || $parent.isAddPriceDisabled()" ng-model="stationException.taxIs" class="form-control">
+							<select name="Tax Is" required ng-disabled="viewOnly || itemIsActive" ng-model="stationException.taxIs" class="form-control">
 								<option value="Included">Included</option>
 								<option value="Excluded">Excluded</option>
 								<option value="Exempt">Exempt</option>
@@ -86,7 +86,7 @@
 							{{ masterCurrenciesList[exceptionCurrency.companyCurrencyId] }} *
 						</div>
 
-						<input ng-model="exceptionCurrency.price" ng-disabled="$parent.isAddPriceDisabled()" type="text" class="form-control"/>
+						<input ng-model="exceptionCurrency.price" ng-disabled="viewOnly || itemIsActive" type="text" class="form-control"/>
 
 					</div>
 
