--- a/app/views/directives/input-station-exception.html
+++ b/app/views/directives/input-station-exception.html
@@ -30,6 +30,7 @@
           <div class="col-xs-12 col-sm-6">
             <date-picker-field ng-if="minDate" min-date="$parent.minDate"
               disable="viewOnly || itemIsInactive" form="form" label="Effective To"
+              end-current-effective="$parent.isAddPriceDisabled() || $parent.editingItem"
               name="StationExceptionPriceEffectiveTo" ng-model="stationException.endDate"
               required="true">
             </date-picker-field>
