TSVPORTAL-11891 | TSVPORTAL-11892 | TSVPORTAL-11894 | TSVPORTAL-11897 | Fixed QA raised issues.

--- a/app/views/packingplan-create.html
+++ b/app/views/packingplan-create.html
@@ -60,7 +60,7 @@
 							<ui-select name="menus" required multiple ng-disabled="isDisabled()" ng-model="plan.packingPlanMenu" theme="bootstrap">
 					            <ui-select-match>{{ $item.menuName }}
 					            </ui-select-match>
-					            <ui-select-choices repeat="menu in menuMasterList | unique: 'id' | filter: $select.search | orderBy:'menuName'">
+					            <ui-select-choices repeat="menu in menuMasterList | unique: 'id' | filter:omitSelectedMenus | orderBy:'menuName'">
 					              <div ng-bind-html="menu.menuName | highlight: $select.search "></div>
 					            </ui-select-choices>
 				          	</ui-select>
@@ -102,9 +102,8 @@
 		         						</div>
 							            <div class="col-xs-12 col-sm-4">
 							            	<date-picker-field 
-									            	ng-if="minDate" 
 									            	disable="isDisabled()" 
-									              	form="form" 
+									              	form="packingPlanDataForm" 
 									              	label="Object Effective Start Date"
 									              	name="ObjectEffectiveStartDate"
 									              	required="true" 
@@ -114,12 +113,12 @@
 		          						</div>
 		          						<div class="col-xs-12 col-sm-4">
 		          							<date-picker-field 
-									            	ng-if="minDate" 
 									            	disable="readOnly || shouldDisableEndDate" 
-									              	form="form" 
+									              	form="packingPlanDataForm" 
 									              	label="Object Effective End Date"
 									                name="ObjectEffectiveEndDate" 
 									                custom-effective="true"
+									                end-current-effective="!viewEditItem"
 									                required="true"
 													custom-date="planObject.endDate"
 									                ng-model="planObject.endDate">
@@ -153,21 +152,21 @@
 							            <div class="col-xs-12 col-sm-3">
 							            	<div class="form-group">
 									          	<label for="measurements">Measurements</label>
-									       		<input ng-model="planObject.length" ng-required="planObject.breadth || planObject.height || planObject.dimensionType" type="text" placeholder="Length" 
+									       		<input ng-model="planObject.length" custom-validity custom-pattern="numberOrDecimal" type="text" placeholder="Length" 
 									            	name="Length" ng-disabled="isDisabled()" class="form-control">
 								            </div>	
 								        </div>
 								        <div class="col-xs-12 col-sm-3">
 								        	<div class="form-group">
 									        	<label class="invisible">Breadth</label>
-									            <input ng-model="planObject.breadth" ng-required="planObject.length || planObject.height || planObject.dimensionType" type="text" placeholder="Breadth" 
+									            <input ng-model="planObject.breadth" custom-validity custom-pattern="numberOrDecimal" type="text" placeholder="Breadth" 
 									            	name="Breadth" ng-disabled="isDisabled()" class="form-control">
 								            </div>	
 								        </div>
 								        <div class="col-xs-12 col-sm-3">
 								        	<div class="form-group">
 									        	<label class="invisible">Height</label>
-									            <input ng-model="planObject.height" ng-required="planObject.breadth || planObject.length || planObject.dimensionType" type="text" placeholder="Height" 
+									            <input ng-model="planObject.height" custom-validity custom-pattern="numberOrDecimal" type="text" placeholder="Height" 
 									            	name="Height" ng-disabled="isDisabled()" class="form-control">
 								            </div>	
 								        </div>
@@ -208,7 +207,7 @@
       									 <div class="col-xs-12 col-sm-5">
       									 	<div class="form-group">
 		        							 	<label>Retail Item</label>
-		        							 	<ui-select ng-if="!isDisabled()" theme="bootstrap" ng-model="item.itemMasterId" 
+		        							 	<ui-select ng-if="!isDisabled()" name="retailItem" theme="bootstrap" ng-model="item.itemMasterId" 
 		        							 			ng-required="item.maxQty || item.minQty">
 				                					<ui-select-match placeholder="Select Retail Item">{{$select.selected.itemName}}</ui-select-match>
 				                					<ui-select-choices repeat="itm.id as itm in itemMasterList | filter: $select.search">
@@ -216,7 +215,7 @@
 				                					</ui-select-choices>
 				              					</ui-select>
 				              					<input ng-if="isDisabled()" ng-model="item.itemName" type="text" class="form-control" 
-				              						name="itemMasterId" ng-disabled="true">
+				              						name="retailItem" ng-disabled="true">
 									        </div>
         								 </div>
 	      								 <div class="col-xs-12 col-sm-3">
