--- a/app/views/packingplan-create.html
+++ b/app/views/packingplan-create.html
@@ -153,21 +153,21 @@
 							            	<div class="form-group">
 									          	<label for="measurements">Measurements</label>
 									       		<input ng-model="planObject.length" ng-required="planObject.breadth || planObject.height || planObject.dimensionType" type="text" placeholder="Length" 
-									            	oninput="this.value=this.value.replace(/[^0-9.]/g,'');" name="Length" ng-disabled="isDisabled()" class="form-control">
+									            	oninput="this.value=this.value.replace(/[^0-9.]/g,'');" ng-pattern="/^\d*\.?\d*$/" maxlength="10" name="Length" ng-disabled="isDisabled()" class="form-control">
 								            </div>	
 								        </div>
 								        <div class="col-xs-12 col-sm-3">
 								        	<div class="form-group">
 									        	<label class="invisible">Breadth</label>
 									            <input ng-model="planObject.breadth" ng-required="planObject.length || planObject.height || planObject.dimensionType" type="text" placeholder="Breadth" 
-									            	oninput="this.value=this.value.replace(/[^0-9.]/g,'');" name="Breadth" ng-disabled="isDisabled()" class="form-control">
+									            	oninput="this.value=this.value.replace(/[^0-9.]/g,'');" ng-pattern="/^\d*\.?\d*$/" maxlength="10" name="Breadth" ng-disabled="isDisabled()" class="form-control">
 								            </div>	
 								        </div>
 								        <div class="col-xs-12 col-sm-3">
 								        	<div class="form-group">
 									        	<label class="invisible">Height</label>
 									            <input ng-model="planObject.height" ng-required="planObject.breadth || planObject.length || planObject.dimensionType" type="text" placeholder="Height" 
-									            	oninput="this.value=this.value.replace(/[^0-9.]/g,'');" name="Height" ng-disabled="isDisabled()" class="form-control">
+									            	oninput="this.value=this.value.replace(/[^0-9.]/g,'');" ng-pattern="/^\d*\.?\d*$/" maxlength="10" name="Height" ng-disabled="isDisabled()" class="form-control">
 								            </div>	
 								        </div>
 								        <div class="col-xs-12 col-sm-3">
@@ -210,7 +210,7 @@
 		        							 	<ui-select ng-if="!isDisabled()" name="retailItem" theme="bootstrap" ng-model="item.itemMasterId" 
 		        							 			ng-required="item.maxQty || item.minQty">
 				                					<ui-select-match placeholder="Select Retail Item">{{$select.selected.itemName}}</ui-select-match>
-				                					<ui-select-choices repeat="itm.id as itm in itemMasterList | filter: $select.search">
+				                					<ui-select-choices repeat="itm.id as itm in itemMasterList">
 				                  						<div ng-bind-html="itm.itemName"></div>
 				                					</ui-select-choices>
 				              					</ui-select>
