--- a/app/views/receipt-rules-create.html
+++ b/app/views/receipt-rules-create.html
@@ -29,27 +29,27 @@
       <div class="panel-body">
         <div class="row">
           <div class="col-xs-12 col-sm-6">
-            <div class="form-group">
+            <div class="form-group" ng-class="{'has-error' : !receiptRule.countryId && displayError , 'has-success' : receiptRule.countryId}">
               <label for="country-id">Country *</label>
               <select class="form-control"
-                      name="countryId"
+                      name="Country"
+                      id="countryId"
                       ng-model="receiptRule.countryId"
-                      ng-selected="receiptRule.countryId === countrie.id"
-                      ng-options="countrie.id as countrie.countryName for countrie in countriesList"
                       ng-disabled="readOnly"
+                      ng-options="country.id as country.countryName for country in countriesList | orderBy: 'countryName'"
                       required="true"
+                      ng-selected="receiptRule.countryId === country.id"
                       ng-change="onCounrtyChange()"
-                      required
-                      id="countryId">
+                      required>
                 <option selected="selected" value>Select Country</option>
               </select>
             </div>
           </div>
 
           <div class="col-xs-12 col-sm-6">
-            <div class="form-group">
+            <div class="form-group" ng-class="{'has-error' : (!multiSelectedValues.globalStationList || multiSelectedValues.globalStationList && multiSelectedValues.globalStationList.length ===0)&& displayError , 'has-success' : multiSelectedValues.globalStationList}">
                 <label for="globalStationList">Station *</label>
-          	     <ui-select id="globalStationList" multiple ng-model="multiSelectedValues.globalStationList"  theme="bootstrap" name="globalStationList"ng-disabled="readOnly" >
+          	     <ui-select id="globalStationList" multiple ng-model="multiSelectedValues.globalStationList"  theme="bootstrap" name="Station" ng-disabled="readOnly" on-select="onSelected($item)">
 	               <ui-select-match placeholder="Select Stations..">{{ $item.code }}</ui-select-match>
 	               <ui-select-choices  
 	               					  repeat="station in globalStationList | filter: $select.search | orderBy: 'station.name'">
@@ -61,32 +61,44 @@
       </div>
       <div class="row">
           <div class="col-xs-12 col-sm-6">
-            <div class="form-group">
+            
+            <div class="form-group" ng-if="!receiptRule.autoPrint && displayError" ng-class="{'has-error' : !receiptRule.autoPrint && displayError , 'has-success' : receiptRule.autoPrint}" style="border:1px solid #a94442">
               <label for="auto-print">Print Auto-Receipt For*</label>
-              <div  class="input-group">
-                <input type="radio" name="autoPrint" value="All" ng-model="receiptRule.autoPrint" ng-selected="receiptRule.autoPrint === 'All' " ng-required=true > All Items
+              <div  class="input-group" >
+                <input type="radio" name="PrintAutoReceiptFor" value="All" ng-model="receiptRule.autoPrint" ng-selected="receiptRule.autoPrint === 'All' " ng-required=true > All Items
               </div>
               <div>
-                <input type="radio" name="autoPrint" value="Item" ng-model="receiptRule.autoPrint" ng-selected="receiptRule.autoPrint === 'Item' "> Specific Retail Items ('Print Receipt' flagged in the item setup screen)
+                <input type="radio" name="PrintAutoReceiptFor" value="Item" ng-model="receiptRule.autoPrint" ng-selected="receiptRule.autoPrint === 'Item' "> Specific Retail Items ('Print Receipt' flagged in the item setup screen)
               </div>  
-                 
             </div>
+            <div class="form-group" ng-if="receiptRule.autoPrint || !displayError">
+              <label for="auto-print">Print Auto-Receipt For*</label>
+              <div  class="input-group" >
+                <input type="radio" name="PrintAutoReceiptFor" value="All" ng-model="receiptRule.autoPrint" ng-selected="receiptRule.autoPrint === 'All' " ng-required=true > All Items
+              </div>
+              <div>
+                <input type="radio" name="PrintAutoReceiptFor" value="Item" ng-model="receiptRule.autoPrint" ng-selected="receiptRule.autoPrint === 'Item' "> Specific Retail Items ('Print Receipt' flagged in the item setup screen)
+              </div>  
+            </div>
+            
           </div>
           <div class="col-xs-12 col-sm-6">
             <div class="form-group">
-              <label for="receipt-rule-limit">Receipt Floor Limit Value*</label>
+              <label for="receipt-rule-limit">Receipt Floor Limit Value *</label>
               <div class="row" ng-repeat="receiptFloorLimitAmountData in receiptFloorLimitAmountsUi track by $index | orderBy: 'receiptFloorLimitAmountData.code'">
               <div class="col-xs-2 col-sm-1 text-right">{{ receiptFloorLimitAmountData.code }}</div>
               <div class="col-xs-10 col-sm-8">
                 <div class="input-group">
                   <span class="input-group-addon"><i class="fa fa-money"></i></span>
-                  <input type="text" class="form-control"
+                    <input 
+                         type="text" 
+                         class="form-control"
                          name="receiptFloorLimitAmountData{{ receiptFloorLimitAmountData.code }}"
-                         custom-validity
                          custom-pattern="numberOrDecimal"
                          ng-model="receiptFloorLimitAmountData.amount"
                          ng-disabled="readOnly || isDisabled"
-                         required>
+                         required
+                         ng-class="{'has-error' : !receiptFloorLimitAmountData.amount && displayError , 'has-success' : receiptFloorLimitAmountData.amount}">
                 </div>
               </div>
           </div>
